Outputs of NATs

--- a/network/tasks/2-tier.yml
+++ b/network/tasks/2-tier.yml
@@ -16,3 +16,10 @@
       "private_subnet_1a" : "{{ private_subnet_1a }}",
       "private_subnet_1b" : "{{ private_subnet_1b }}"
     }
+  register: network
+
+- debug:
+    msg:
+      - "NAT 1a: {{ network.outputs.workspace_nat_gateway_1a.value }}"
+      - "NAT 1b: {{ network.outputs.workspace_nat_gateway_1b.value }}"
+  when: ( state == "present" )
